# MacScan

MachoDecompile/: ContextService.x86_64.CC7E1346-D8D1-3F58-8561-DFB86B2CA7F0  XPC.db  go.mod  go.sum  io_utils.h  iosurface_utils.c  main.go  os_mac_xpc.db  privs.db  test.txt
MachoDecompile/ContextHeaders/: AndroidUtilLruCache.h  AsynchronousSocketCloseMonitor.h  AutoreleaseLiteSupport-Protocol.h  BigramInfo.h  BigramKey.h  CKContextDonationServiceProtocol-Protocol.h  CKContextXPCProtocol-Protocol.h  CKContextXPCProtocolImpl.h  CTKABHelper.h  CTKAssets.h  CTKAssetsProtocol-Protocol.h  CTKMergedNamedEntity.h  CTKNamedEntity.h  CTKPaths.h  ComAppleContextkitCategoriesCatIdTitleMap.h  ComAppleContextkitCategoriesConstellation.h  ComAppleContextkitCategoriesConstellation_$1.h  ComAppleContextkitCategoriesConstellation_$2.h  ComAppleContextkitCategoriesConstellation_AncestorConsumer-Protocol.h  ComAppleContextkitCategoriesConstellation_CategoryCount.h  ComAppleContextkitCategoriesConstellation_QIDCount.h  ComAppleContextkitCategoriesConstellation_Request.h  ComAppleContextkitCategoriesConstellation_Request_$1.h  ComAppleContextkitCategoriesConstellation_Request_$2.h  ComAppleContextkitCategoriesConstellation_Request_$3.h  ComAppleContextkitCategoriesConstellation_Request_$4.h  ComAppleContextkitCategoriesConstellation_Request_CategoryCountPQ.h  ComAppleContextkitCategoriesConstellation_Request_QIDCountPQ.h  ComAppleContextkitCategoriesQIDCategoryProvider-Protocol.h  ComAppleContextkitUtilBytesRefPool.h  (+1800 more)
RustX/: Cargo.toml
RustX/src/: main.rs
