[package]
name = "RustX"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.112"
mach = "0.3.2"
darwin = "0.1.0"
sysinfo = "0.22.5"
colored = "1.9.3"

serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.13", features = ["derive"] }






[profile.release]
opt-level = "z"